--- a/package.json
+++ b/package.json
@@ -14,16 +14,11 @@
     "@babel/preset-env": "^7.26.9",
     "@faker-js/faker": "^9.6.0",
     "@types/k6": "^0.57.1",
-    "assert": "^2.1.0",
     "babel-loader": "^10.0.0",
-    "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.41.0",
-    "crypto-browserify": "^3.12.1",
-    "https-browserify": "^1.0.0",
-    "process": "^0.11.10",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.4",
+    "https-proxy-agent": "^7.0.6",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-glob-entries": "^1.0.1"
